--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="" ><!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
-         <p><span>COLUMBIARECORDS.COM</span></p><!-- span text 'COLUMBIARECORDS.COM' -->
+         <span>COLUMBIARECORDS.COM</span><!-- span text 'COLUMBIARECORDS.COM' -->
 
 </p>
         <br>
